@@ -5,6 +5,8 @@
 Apache Gora 0.6.1 Release - 02/03/2015 (dd/mm/yyyy)
 Release Report - http://s.apache.org/l69 
 
+* GORA-424 Cache cursor size to improve performance (Alexander Yastrebov via drazzib)
+
 * GORA-423 BSONDecorator returns empty string for null field value (Alexander Yastrebov via drazzib)
 
 * GORA-262 Add support for HTTPClient authentication in gora-solr (Furkan KAMACI via lewismc)
